--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,92 @@
-.App {
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400');
+
+body {
+  font-family: "Open Sans", serif;
+}
+
+.wrapper {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.content {
+  height: 90vh;
+  background: #fff;
+  width: 80%;
+  margin: 0 auto;
+}
+
+.title-container {
+  height: 90vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   text-align: center;
-  color: black;
+  color: #000;
+  background-color: #e8eced;
 }
 
-.App-header {
-  background-color: #889388;
-  height: 50px;
-  padding: 20px;
+.form-container {
+  background-color: #2c3e50;
+  height: 90vh;
+  padding-top: 100px;
+  padding-left: 50px;
+  color: white;
 }
 
-.App-title {
-  font-size: 1.5em;
+input[type='text'], input[type='number'] {
+  background-color: #2c3e50;
+  border: 0;
+  border-bottom: solid 1px #92aeb2;
+  width: 30%;
+  padding-bottom: 4px;
+  font-weight: lighter;
+  letter-spacing: 2px;
+  margin-bottom: 30px;
+  margin-right: 20px;
+  font-size: 20px;
+  outline: none;
 }
 
-.App-intro {
-  font-size: large;
+button {
+  border: 0;
+  padding: 8px 20px;
+  margin: 0 2px;
+  border-radius: 2px;
+  font-weight: lighter;
+  letter-spacing: 1px;
+  font-size: 15px;
+  cursor: pointer;
+  background-color: #92aeb2;
+  color: #fff;
+  font-weight: 100;
+}
+
+.provider-key {
+  color: grey;
+  border-bottom: solid 2px cream;
+  padding: 20px 0 20px 0;
+  font-weight: 400;
+}
+
+.error-message {
+  color: white;
+}
+
+.provider-info {
+  width: 60%;
+  font-size: 20px;
+  font-weight: 200;
+  letter-spacing: 2px;
+}
+
+.provider-heading {
+  color: #92aeb2;
+  font-weight: 200;
+}
+
+button:active {
+  outline: none;
 }
