Make provider type a dropdown select within form instead of text entry.

--- a/src/App.css
+++ b/src/App.css
@@ -36,10 +36,24 @@ body {
   color: white;
 }
 
-input[type='text'], input[type='number'] {
+input[type='number'] {
   background-color: #2c3e50;
   border: 0;
   border-bottom: solid 1px #92aeb2;
+  width: 30%;
+  padding-bottom: 4px;
+  font-weight: lighter;
+  letter-spacing: 2px;
+  margin-bottom: 30px;
+  margin-right: 20px;
+  font-size: 20px;
+  outline: none;
+}
+
+select {
+  background-color: #2c3e50;
+  border: 1;
+  border: solid 1px #92aeb2;
   width: 30%;
   padding-bottom: 4px;
   font-weight: lighter;
