--- a/src/App.css
+++ b/src/App.css
@@ -80,7 +80,7 @@ button {
 
 .provider-key {
   color: grey;
-  border-bottom: solid 2px cream;
+  border-bottom: solid 1px lightgrey;
   padding: 20px 0 20px 0;
   font-weight: 400;
 }
