--- a/src/App.css
+++ b/src/App.css
@@ -81,7 +81,7 @@ button {
 .provider-key {
   color: grey;
   border-bottom: solid 1px lightgrey;
-  padding: 20px 0 20px 0;
+  padding: 5px 0 5px 0;
   font-weight: 400;
 }
 
@@ -90,10 +90,13 @@ button {
 }
 
 .provider-info {
-  width: 60%;
-  font-size: 20px;
+  width: 90%;
+  font-size: 15px;
   font-weight: 200;
   letter-spacing: 2px;
+  line-height: 35px;
+  overflow: scroll;
+  height: 450px;
 }
 
 .provider-heading {
