--- a/src/App.css
+++ b/src/App.css
@@ -36,7 +36,7 @@ body {
   color: white;
 }
 
-input[type='number'] {
+input[type='number'], input[type='text'] {
   background-color: #2c3e50;
   border: 0;
   border-bottom: solid 1px #92aeb2;
