--- a/src/App.css
+++ b/src/App.css
@@ -4,22 +4,8 @@ body {
   font-family: "Open Sans", serif;
 }
 
-.wrapper {
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.content {
-  height: 90vh;
-  background: #fff;
-  width: 80%;
-  margin: 0 auto;
-}
-
 .title-container {
-  height: 90vh;
+  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -30,16 +16,14 @@ body {
 
 .form-container {
   background-color: #2c3e50;
-  height: 90vh;
+  height: 100vh;
   padding-top: 100px;
   padding-left: 50px;
   color: white;
 }
 
-input[type='number'], input[type='text'] {
+input[type='number'], input[type='text'], select {
   background-color: #2c3e50;
-  border: 0;
-  border-bottom: solid 1px #92aeb2;
   width: 30%;
   padding-bottom: 4px;
   font-weight: lighter;
@@ -50,18 +34,13 @@ input[type='number'], input[type='text'] {
   outline: none;
 }
 
+input[type='number'], input[type='text'] {
+  border: 0;
+  border-bottom: solid 1px #92aeb2;
+}
+
 select {
-  background-color: #2c3e50;
   border: 1;
-  border: solid 1px #92aeb2;
-  width: 30%;
-  padding-bottom: 4px;
-  font-weight: lighter;
-  letter-spacing: 2px;
-  margin-bottom: 30px;
-  margin-right: 20px;
-  font-size: 20px;
-  outline: none;
 }
 
 button {
