--- a/src/App.css
+++ b/src/App.css
@@ -7,11 +7,37 @@ body {
 .title-container {
   height: 100vh;
   display: flex;
-  align-items: center;
   justify-content: center;
   text-align: center;
   color: #000;
   background-color: #e8eced;
+}
+
+.title-text h1 {
+  margin-top: 100px;
+  font-size: 50px;
+}
+
+.title-text h3 {
+  margin-top: 30px;
+  margin-bottom: 100px;
+}
+
+.title-text h4 {
+  margin-bottom: 30px;
+}
+
+.line {
+  height: 1px;
+  width: 80%;
+  background-color: #2c3e50;
+  margin-left: 10%;
+  margin-bottom: 30px;
+}
+
+.title-text p {
+  padding-right: 80px;
+  padding-left: 80px;
 }
 
 .form-container {
