--- a/src/App.css
+++ b/src/App.css
@@ -14,25 +14,25 @@ body {
 }
 
 .title-text h1 {
-  margin-top: 100px;
+  margin-top: 80px;
   font-size: 50px;
 }
 
 .title-text h3 {
-  margin-top: 30px;
+  margin-top: 40px;
   margin-bottom: 100px;
 }
 
 .title-text h4 {
-  margin-bottom: 30px;
+  margin-bottom: 40px;
 }
 
 .line {
   height: 1px;
-  width: 80%;
-  background-color: #2c3e50;
-  margin-left: 10%;
-  margin-bottom: 30px;
+  width: 70%;
+  background-color: #adadad;
+  margin-left: 15%;
+  margin-bottom: 40px;
 }
 
 .title-text p {
@@ -43,7 +43,7 @@ body {
 .form-container {
   background-color: #2c3e50;
   height: 100vh;
-  padding-top: 100px;
+  padding-top: 80px;
   padding-left: 50px;
   color: white;
 }
@@ -56,7 +56,7 @@ input[type='number'], input[type='text'], select {
   letter-spacing: 2px;
   margin-bottom: 30px;
   margin-right: 20px;
-  font-size: 20px;
+  font-size: 18px;
   outline: none;
 }
 
@@ -72,7 +72,7 @@ select {
 button {
   border: 0;
   padding: 8px 20px;
-  margin: 0 2px;
+  margin: 0 2px 12px;
   border-radius: 2px;
   font-weight: lighter;
   letter-spacing: 1px;
@@ -81,6 +81,7 @@ button {
   background-color: #92aeb2;
   color: #fff;
   font-weight: 100;
+  display: block;
 }
 
 .provider-key {
@@ -107,4 +108,8 @@ button {
 .provider-heading {
   color: #92aeb2;
   font-weight: 200;
+}
+
+.grey-text{
+  color: darkgrey;
 }
